Document the JDK the Gradle wrapper needs.
Gradle 7.4 refuses to configure on JDK 18+, and spotless dies on JDK 17
because google-java-format needs --add-exports into compiler internals.
Both cost time to rediscover, so record them next to the commands they
break: the general constraint in the README, the host-specific JAVA_HOME
in the refactor handoff doc.